; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_alsa.c_resume_device.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_alsa.c_resume_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.priv* }
%struct.priv = type { i32 }

@SND_PCM_STATE_SUSPENDED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [40 x i8] c"PCM in suspend mode, trying to resume.\0A\00", align 1
@EAGAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ao*)* @resume_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @resume_device(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  %3 = alloca %struct.priv*, align 8
  %4 = alloca i32, align 4
  store %struct.ao* %0, %struct.ao** %2, align 8
  %5 = load %struct.ao*, %struct.ao** %2, align 8
  %6 = getelementptr inbounds %struct.ao, %struct.ao* %5, i32 0, i32 0
  %7 = load %struct.priv*, %struct.priv** %6, align 8
  store %struct.priv* %7, %struct.priv** %3, align 8
  %8 = load %struct.priv*, %struct.priv** %3, align 8
  %9 = getelementptr inbounds %struct.priv, %struct.priv* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @snd_pcm_state(i32 %10)
  %12 = load i64, i64* @SND_PCM_STATE_SUSPENDED, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %28

14:                                               ; preds = %1
  %15 = load %struct.ao*, %struct.ao** %2, align 8
  %16 = call i32 @MP_INFO(%struct.ao* %15, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %25, %14
  %18 = load %struct.priv*, %struct.priv** %3, align 8
  %19 = getelementptr inbounds %struct.priv, %struct.priv* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @snd_pcm_resume(i32 %20)
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* @EAGAIN, align 4
  %23 = sub nsw i32 0, %22
  %24 = icmp eq i32 %21, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %17
  %26 = call i32 @sleep(i32 1)
  br label %17

27:                                               ; preds = %17
  br label %28

28:                                               ; preds = %27, %1
  ret void
}

declare dso_local i64 @snd_pcm_state(i32) #1

declare dso_local i32 @MP_INFO(%struct.ao*, i8*) #1

declare dso_local i32 @snd_pcm_resume(i32) #1

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
